handled the call screen misalignment + bg fixes of recent and dialpad

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -137,6 +137,7 @@ button {
 
 .callwindow {
   height: 100vh;
+  width: 430px;
   padding: 20px;
   background: radial-gradient(at top left, #66676b, #353a40);
 }
@@ -268,6 +269,9 @@ button {
 
 @media (max-width: 450.98px) {
   .parent-container {
+    width: auto;
+  }
+  .callwindow {
     width: auto;
   }
 }
